k8s/blog-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-app-ingress
  namespace: flask-ns
spec:
  rules:
  - host: myblog.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: flask-service
              port:
                number: 443
